attempt of fix on mobile for about iamge

--- a/styles/components/_about.scss
+++ b/styles/components/_about.scss
@@ -6,6 +6,7 @@
     img {
       box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
       width: 70%;
+      object-fit: cover;
     }
   }
 
