--- a/styles/style.scss
+++ b/styles/style.scss
@@ -72,7 +72,7 @@ section.contact {
 
 .social__list--container.general {
   bottom: auto;
-  top: 7%;
+  top: 9%;
   opacity: 0;
   display: flex;
   justify-content: center;
